# src

./: Default.perspective
camera_worker_pkg/: package.xml  setup.cfg  setup.py
geometry_calculate/: package.xml  setup.cfg  setup.py
gzb_sim_pkg/: package.xml  setup.cfg  setup.py  sim_Assem.sdf
gzb_sim_pkg/config/: joint_names_sim_Assem.SLDASM.yaml  robot_description.yaml  ros2_control.yaml
gzb_sim_pkg/gzb_sim_pkg/: demo_trajectory.py
gzb_sim_pkg/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
gzb_sim_pkg/install/gzb_sim_pkg/lib/gzb_sim_pkg/: demo_trajectory
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/config/: joint_names_sim_Assem.SLDASM.yaml  robot_description.yaml  ros2_control.yaml
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/launch/: gazebo_bringup.launch.py  rviz_display.launch.py
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/urdf/: sim_Assem.SLDASM.csv  sim_Assem.SLDASM.urdf
gzb_sim_pkg/install/gzb_sim_pkg/share/gzb_sim_pkg/worlds/: building_sim_Assem.sdf
gzb_sim_pkg/launch/: gazebo.launch  gazebo_bringup.launch.py  rviz_display.launch.py
gzb_sim_pkg/log/: latest_build
gzb_sim_pkg/urdf/: sim_Assem.SLDASM.csv  sim_Assem.SLDASM.urdf
gzb_sim_pkg/worlds/: building_sim_Assem.sdf
install/: local_setup.sh  setup.bash  setup.sh
launch/: .swp  gd_robot_bringup.py
log/: latest_build  latest_list
plc_worker_pkg/: package.xml  setup.cfg  setup.py
robot_description_pkg/: package.xml  setup.py
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: PlcCommand.msg  PlcReadBit.msg  PlcReadWord.msg  PlcState.msg  PlcValue.msg  PlcValueList.msg  PoseListMsg.msg  PoseStampedConveyor.msg
robot_interfaces/srv/: PoseListSrv.srv
system_sim_pkg/: package.xml  setup.cfg  setup.py
test_node_pkg/: package.xml  setup.cfg  (+1 more)
(+65 files in other folders)
