<?xml version="1.0"?>
<package format="3">
  <name>gzb_sim_pkg</name>
  <version>0.0.1</version>
  <description>Gazebo / ros2_control simulation package for sim_Assem robot.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build type -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime deps: nodes + launch -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- test deps (giữ khung ament lint) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    
  </export>
</package>
